# project-pypp

./: .gitignore  CMakeLists.txt
src/back/: main.cpp  main.h
src/back/connector/: audio_message_queue.cpp  audio_message_queue.h
src/back/player/: effects_list.cpp  effects_list.h  jack_callbacks.h  jack_client.cpp  jack_client.h  player.cpp  player.h
src/back/utils/: log.cpp  log.h
src/back/utils/exception/: exception.cpp  exception.h  log_exception.cpp  log_exception.h
src/front/: main.py  my.kv
